testcases/neg/sem/nil_eq_nil.tig
/* error: type of NilExp cannot be infered */
nil=nil
